--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
         }
 
         form {
             max-width: 400px;
-            margin: 50px auto;
+            margin: 20px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
         }
 
         input {
@@ -32,6 +42,12 @@
         button:hover {
             opacity: 0.8;
         }
+
+        #register-link {
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -45,9 +61,12 @@
         <input type="password" id="loginPassword" name="loginPassword" required>
 
         <button type="submit">Login</button>
+        <p id="loginMessage"></p>
+
+        <a href="#" id="register-link">Belum punya akun? Registrasi di sini.</a>
     </form>
 
-    <form id="registerForm">
+    <form id="registerForm" style="display: none;">
         <h2>Registrasi</h2>
         <label for="registerUsername">Username:</label>
         <input type="text" id="registerUsername" name="registerUsername" required>
@@ -56,19 +75,45 @@
         <input type="password" id="registerPassword" name="registerPassword" required>
 
         <button type="submit">Registrasi</button>
+        <p id="registerMessage"></p>
+
+        <a href="#" id="login-link">Sudah punya akun? Login di sini.</a>
     </form>
 
     <script>
-        document.getElementById("loginForm").addEventListener("submit", function(event) {
+        const loginForm = document.getElementById("loginForm");
+        const registerForm = document.getElementById("registerForm");
+        const loginLink = document.getElementById("login-link");
+        const registerLink = document.getElementById("register-link");
+
+        loginForm.addEventListener("submit", function (event) {
             event.preventDefault();
-            // Lakukan autentikasi login di sini
-            alert("Login berhasil!");
+            const username = document.getElementById("loginUsername").value;
+            const password = document.getElementById("loginPassword").value;
+
+            // Lakukan autentikasi login di sini (contoh sederhana menggunakan alert)
+            alert(`Login berhasil! Username: ${username}, Password: ${password}`);
         });
 
-        document.getElementById("registerForm").addEventListener("submit", function(event) {
+        registerForm.addEventListener("submit", function (event) {
             event.preventDefault();
-            // Lakukan proses registrasi di sini
-            alert("Registrasi berhasil!");
+            const username = document.getElementById("registerUsername").value;
+            const password = document.getElementById("registerPassword").value;
+
+            // Lakukan proses registrasi di sini (contoh sederhana menggunakan alert)
+            alert(`Registrasi berhasil! Username: ${username}, Password: ${password}`);
+        });
+
+        loginLink.addEventListener("click", function (event) {
+            event.preventDefault();
+            loginForm.style.display = "block";
+            registerForm.style.display = "none";
+        });
+
+        registerLink.addEventListener("click", function (event) {
+            event.preventDefault();
+            loginForm.style.display = "none";
+            registerForm.style.display = "block";
         });
     </script>
 
