--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
+            background-image: url('https://example.com/path-to-your-cloud-image.jpg');
+            background-size: cover;
         }
 
         form {
@@ -43,10 +45,13 @@
             opacity: 0.8;
         }
 
-        #register-link {
+        #register-link, #login-link {
             display: block;
             text-align: center;
             margin-top: 10px;
+            color: #333;
+            text-decoration: underline;
+            cursor: pointer;
         }
     </style>
 </head>
