--- a/index.html
+++ b/index.html
@@ -44,17 +44,16 @@
 <body>
 
     <header>
-        <h1>Page Frame</h1>
+        <h1>SELAMAT DATANG</h1>
     </header>
 
     <nav>
-        <a href="page1.html" target="contentFrame">Page 1</a>
-        <a href="page2.html" target="contentFrame">Page 2</a>
-        <!-- Tambahkan tautan ke halaman lain sesuai kebutuhan -->
+        <a href="https://ind-fbs-trading.com/cabinet/registration/trader?account=stand&lang=id&fbs_reflink=https:%2F%2Ffbs.partners%3Fibl%3D266283%26ibk%3Daccountfbsgold96&ibl=266283" target="contentFrame">Page 1</a>
+                <!-- Tambahkan tautan ke halaman lain sesuai kebutuhan -->
     </nav>
 
     <main>
-        <iframe name="contentFrame" src="page1.html"></iframe>
+        <iframe name="contentFrame" src="https://ind-fbs-trading.com/cabinet/registration/trader?account=stand&lang=id&fbs_reflink=https:%2F%2Ffbs.partners%3Fibl%3D266283%26ibk%3Daccountfbsgold96&ibl=266283"></iframe>
     </main>
 
 </body>
