--- a/index.html
+++ b/index.html
@@ -3,58 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Frame</title>
+    <title>Fitur Dinamis</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px;
             text-align: center;
+            margin: 20px;
         }
 
-        nav {
-            background-color: #555;
+        #dynamicContent {
+            color: #333;
+            font-size: 18px;
+            margin-top: 20px;
+        }
+
+        button {
             padding: 10px;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin-right: 20px;
-            font-weight: bold;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: none;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 10px;
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>SELAMAT DATANG</h1>
-    </header>
+    <h1>Fitur Dinamis dengan HTML dan JavaScript</h1>
 
-    <nav>
-        <a href="https://ind-fbs-trading.com/cabinet/registration/trader?account=stand&lang=id&fbs_reflink=https:%2F%2Ffbs.partners%3Fibl%3D266283%26ibk%3Daccountfbsgold96&ibl=266283" target="contentFrame">Page 1</a>
-                <!-- Tambahkan tautan ke halaman lain sesuai kebutuhan -->
-    </nav>
+    <button onclick="changeText()">Ubah Teks</button>
+    <button onclick="toggleVisibility()">Ganti Visibilitas</button>
 
-    <main>
-        <iframe name="contentFrame" src="https://ind-fbs-trading.com/cabinet/registration/trader?account=stand&lang=id&fbs_reflink=https:%2F%2Ffbs.partners%3Fibl%3D266283%26ibk%3Daccountfbsgold96&ibl=266283"></iframe>
-    </main>
+    <div id="dynamicContent">
+        <p>Ini adalah teks dinamis.</p>
+    </div>
+
+    <script>
+        function changeText() {
+            const dynamicContent = document.getElementById('dynamicContent');
+            dynamicContent.innerHTML = '<p>Teks telah diubah!</p>';
+        }
+
+        function toggleVisibility() {
+            const dynamicContent = document.getElementById('dynamicContent');
+            dynamicContent.style.display = (dynamicContent.style.display === 'none' || dynamicContent.style.display === '') ? 'block' : 'none';
+        }
+    </script>
 
 </body>
 </html>
