--- a/index.html
+++ b/index.html
@@ -59,10 +59,18 @@
     </table>
 
     <form id="crudForm">
-        <label for="name">Name:</label>
+        <label for="name">Hari:</label>
         <input type="text" id="name" required>
-        <label for="email">Email:</label>
+        <label for="email">Tanggal:</label>
         <input type="email" id="email" required>
+        <label for="column4">Pukul:</label>
+        <input type="column4" id="column4" required>
+        <label for="column5">Nama Kegiatan:</label>
+        <input type="column5" id="column5" required>
+        <label for="column6">Tempat:</label>
+        <input type="column6" id="column6" required>
+        <label for="column7">Keterangan:</label>
+        <input type="column7" id="column7" required>
         <button type="button" onclick="addData()">Add</button>
     </form>
 
